#170: Adjust and add missing ImportService tests